--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,21 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.22.1'
+    }
+}
 //noinspection GradleCompatible
 //noinspection GradleCompatible
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 //noinspection GroovyMissingReturnStatement
 android {
@@ -65,6 +80,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.google.android.gms:play-services-places:10.2.0'
     compile 'com.google.android.gms:play-services-location:10.2.0'
+    compile 'com.google.firebase:firebase-ads:10.2.0'
     compile 'com.google.firebase:firebase-core:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'com.google.firebase:firebase-auth:10.2.0'
@@ -72,6 +88,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.2.0'
     compile 'com.google.firebase:firebase-config:10.2.0'
     compile 'com.google.firebase:firebase-invites:10.2.0'
+    compile 'com.firebase:geofire-android:2.1.1'
     compile 'com.firebaseui:firebase-ui-auth:1.2.0'
     compile 'com.github.paolorotolo:appintro:4.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -85,9 +102,11 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.afollestad:drag-select-recyclerview:0.3.6'
-    compile 'com.firebase:geofire-android:2.1.1'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
+        transitive = true;
+    }
 }
 apply plugin: 'com.google.gms.google-services'
